# lightprobe

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cli/: CMakeLists.txt  cli.h  cmd_attach.c  cmd_detach.c  cmd_disable.c  cmd_enable.c  cmd_events.c  cmd_list.c  main.c
controller/: CMakeLists.txt  controller_internal.h  controller_stub.c  elf_resolver.c  gadget_finder.c  makefile  maps_parser.c  process_attach.c  remote_mem.c  remote_mem_ptrace.c  remote_syscall.c  thread_control.c
docs/: README.md  benchmark_report.md  demo_video_guide.md  improvement_plan.md  member_a_runtime_layout.md  member_b_task.md  presentation_report.md  project_structure.md  verification_and_benchmark.md  verification_log.md
docs/competition/: README.md  competition_compliance_checklist.md  official_competition_rules.md  official_metadata.json  official_scoring_rules.md  open_source_and_integrity_commitment.md  registration_and_submission_materials.md
docs/figures/: lightprobe_architecture_cn.arch.json  lightprobe_architecture_cn.drawio  lightprobe_architecture_cn.spec.yaml  lightprobe_demo_flow.dot  lightprobe_demo_flow.mmd
include/: arch_x86_64.h  controller.h  event.h  injector.h  lightprobe.h  probe_types.h  runtime.h
injector/: CMakeLists.txt  context_x86_64.S  instruction_x86_64.c  patch_x86_64.c  probe_manager.c  probe_stub_x86_64.S  ret_stub_x86_64.S  trampoline_x86_64.c  xmm_save_restore_x86_64.S
runtime/: CMakeLists.txt  event_buffer.c  remote_layout.c  runtime_config.c  shadow_stack.c
speech/: LightProbe_轻量级用户态动态探针.pptx  企划书.docx
tests/scripts/: demo.sh  (+14 more)
(+17 files in other folders)
